# OctoDeps

./: Cargo.toml  LICENSE  README.md
.github/workflows/: cd.yml
src/: config_reader.rs  http_client.rs  http_server.rs  main.rs  models.rs  octodeps_opt.rs  scheduler.rs  state.rs  tera_embeded.rs
static/: vanilla-framework-version-2.25.1.min.css
templates/: base.html.tera  header.html.tera  index.html.tera  last-update-infos.html.tera  style.html.tera
test-config/: config.json  octodeps-rs.octodeps.json  octodeps.octodeps.json
