[package]
name = "octodeps"
version = "0.1.0"
authors = ["Anthony Pena <anthony.pena@outlook.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
rocket = "0.4.7"
serde  = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.21"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json", "serve", "tera_templates"]